# rag-for-beginner

./: .gitignore  LICENSE  README.md  plan.md  pyproject.toml
chroma_db/: chroma.sqlite3
step_00_data_download/: download.ipynb
step_01_data_set/: docs.jsonl  split_docs.jsonl  데이터조사_가공.ipynb
step_02_embedding/: README.md  embedding.ipynb
step_03_RAG/: RAG.ipynb
