[project]
name = "roo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chromadb>=0.6.3",
    "ipykernel>=6.29.5",
    "langchain>=0.3.20",
    "langchain-community>=0.3.19",
    "langchain-openai>=0.3.8",
    "matplotlib>=3.10.1",
    "pandas>=2.2.3",
    "rank-bm25>=0.2.2",
    "requests>=2.32.3",
]
